<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utfr_rviz_plugins</name>
  <version>0.0.1</version>
  <description>RViz plugins specific to UTFR.</description>
  <maintainer email="kelvinwhcui@gmail.com">Kelvin Cui</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>utfr_msgs</depend>
  <depend>utfr_common</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libqt5-widgets</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
